--- a/src/Haiku/Makefile
+++ b/src/Haiku/Makefile
@@ -31,13 +31,14 @@ TYPE=APP
 #	are included from different directories.  Also note that spaces
 #	in folder names do not work well with this makefile.
 SRCS=../main.cpp main_beos.cpp ../prefs.cpp ../prefs_items.cpp prefs_beos.cpp \
-    prefs_editor_beos.cpp sys_beos.cpp ../rom_patches.cpp ../rsrc_patches.cpp \
-    ../emul_op.cpp ../name_registry.cpp ../macos_util.cpp ../timer.cpp \
-    timer_beos.cpp ../xpram.cpp xpram_beos.cpp ../adb.cpp clip_beos.cpp \
-    ../sony.cpp ../disk.cpp ../cdrom.cpp ../scsi.cpp scsi_beos.cpp \
-    ../video.cpp video_beos.cpp ../audio.cpp audio_haiku.cpp ../ether.cpp \
-    ether_beos.cpp ../serial.cpp serial_beos.cpp ../extfs.cpp extfs_beos.cpp \
-    about_window_beos.cpp ../user_strings.cpp user_strings_beos.cpp ../thunks.cpp
+    prefs_editor_beos.cpp sys_beos.cpp ../rom_patches.cpp ../rom_toolbox.cpp \
+    ../rsrc_patches.cpp ../emul_op.cpp ../name_registry.cpp ../macos_util.cpp \
+    ../timer.cpp timer_beos.cpp ../xpram.cpp xpram_beos.cpp ../adb.cpp \
+    clip_beos.cpp ../sony.cpp ../disk.cpp ../cdrom.cpp ../scsi.cpp \
+    scsi_beos.cpp ../video.cpp video_beos.cpp ../audio.cpp audio_haiku.cpp \
+    ../ether.cpp ether_beos.cpp ../serial.cpp serial_beos.cpp ../extfs.cpp \
+    extfs_beos.cpp about_window_beos.cpp ../user_strings.cpp \
+    user_strings_beos.cpp ../thunks.cpp
 
 #	specify the resource files to use
 #	full path or a relative path to the resource file can be used.
