--- a/src/SConscript
+++ b/src/SConscript
@@ -13,9 +13,10 @@ import platform
 import sys
 
 # Add a dependency to build system
-def depend(environment, package):
+def depend(environment, package, friendly):
 	print 'Checking for ' + package + '...'
 	environment.ParseConfig('pkg-config --cflags --libs ' + package)
+	env.Append(CPPDEFINES = ['ENABLE_' + friendly])
 	return;
 
 machineOS = platform.system()
@@ -53,11 +54,11 @@ if machineOS in ('Linux', 'FreeBSD'):
 	source_code += Glob('#/src/Unix/*.c')
 	source_code += Glob('#/src/Unix/Linux/*.cpp')
 	source_code += Glob('#/src/dummy/prefs_dummy.cpp')
-	depend(env, 'gtk+-2.0')
-	depend(env, 'x11')
-	depend(env, 'xext')
-	depend(env, 'xxf86dga')
-	depend(env, 'xxf86vm')
+	depend(env, 'gtk+-2.0', 'GTK')
+	depend(env, 'x11', 'X11')
+	depend(env, 'xext', 'XEXT')
+	depend(env, 'xxf86dga', 'XF86_DGA')
+	depend(env, 'xxf86vm', 'XF86_VIDMODE')
 elif machineOS in ('Darwin'):
 	print "TODO: MacOS X Support"
 	sys.exit(1)
