kpx_cpu: Add PowerPC Disassembly to segfaults
* Based on original patch to SheepShaver by asvitkine

--- a/src/SConscript
+++ b/src/SConscript
@@ -56,7 +56,8 @@ source_code = Glob('#/src/*.cpp')
 cpu_code = ['#/src/kpx_cpu/src/mathlib/ieeefp.cpp', '#/src/kpx_cpu/src/mathlib/mathlib.cpp',
 	'#/src/kpx_cpu/src/cpu/ppc/ppc-cpu.cpp', '#/src/kpx_cpu/src/cpu/ppc/ppc-decode.cpp',
 	'#/src/kpx_cpu/src/cpu/ppc/ppc-execute.cpp', '#/src/kpx_cpu/src/cpu/ppc/ppc-translate.cpp',
-	'#/src/kpx_cpu/src/utils/utils-cpuinfo.cpp', '#/src/kpx_cpu/sheepshaver_glue.cpp']
+	'#/src/kpx_cpu/src/utils/utils-cpuinfo.cpp', '#/src/kpx_cpu/ppc-dis.c',
+	'#/src/kpx_cpu/sheepshaver_glue.cpp']
 
 if machineOS in ('Linux', 'FreeBSD'):
 	env.Append(CPPDEFINES = ['HAVE_BYTESWAP_H', 'HAVE_SIGINFO_T'])
