virtual_memory: Clean up virtual memory management
* Rename REAL_ADDRESSING to DYNAMIC_ADDRESSING
  REAL never really made sense to me as it points
  to the fact that memory addresses are allocated
  by the OS vs being static.
* Drop rigid linker script allocation.
  This is a really strange hack that causes a lot
  of confusion.
* Simplify memory allocation code
* These changes all are experimental and shouldn't
  be used upstream until they are known working :)

--- a/src/SConscript
+++ b/src/SConscript
@@ -41,7 +41,7 @@ if int(use_debug):
 if int(use_sdl):
 	env.Append(CPPDEFINES = ['USE_SDL', 'USE_SDL_AUDIO', 'USE_SDL_VIDEO'])
 
-env.Append(CPPDEFINES = ['_REENTRANT', 'DATADIR=\\"/usr/share/SheepShear\\"','REAL_ADDRESSING=1']);
+env.Append(CPPDEFINES = ['_REENTRANT', 'DATADIR=\\"/usr/share/SheepShear\\"','DYNAMIC_ADDRESSING=1']);
 
 env.Append(CPPPATH = [
 	'#/src/include',
